--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -30,8 +30,6 @@ import btnPlay from '../assets/button-playstore.svg';
             <meta itemprop="ratingValue" content="5" />
             <p itemprop="reviewBody">Šī ir lieliska lietotne, lai apskatītu un rediģētu prototipus! Ļoti ērta un viegli lietojama.</p>
         </div>
-        
-        <p itemprop="author">Jānis Līgciemietis</p>
         <meta itemprop="datePublished" content="2024-12-13" />
     </div>
 
@@ -39,8 +37,8 @@ import btnPlay from '../assets/button-playstore.svg';
     <div class="banner__buttons">
         <!-- App Store Button -->
         <a 
-            href="/" 
-            title="Iet uz App Store portālu" 
+            href="https://apps.apple.com/us/app/figma/id1152747299" 
+            title="Iet uz App Store portālu, lai lejupielādetu Figma lietotni" 
             target="_blank" 
             rel="noopener noreferrer" 
             aria-label="Atvērt App Store portālu jaunā logā"
@@ -57,8 +55,8 @@ import btnPlay from '../assets/button-playstore.svg';
 
         <!-- Google Play Button -->
         <a 
-            href="/" 
-            title="Iet uz Google Play Store portālu" 
+            href="https://play.google.com/store/search?q=figma&c=apps" 
+            title="Iet uz Google Play Store portālu, lai lejupielādētu Figma lietotni" 
             target="_blank" 
             rel="noopener noreferrer" 
             aria-label="Atvērt Google Play Store portālu jaunā logā"
@@ -87,6 +85,7 @@ import btnPlay from '../assets/button-playstore.svg';
         }
 
         &__buttons {
+            margin-top: 24px;
             display: flex;
             gap: 8px;
 
