--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import iconPhone from '../assets/icon-phone.svg';
     <div class="wrap">
         <div class="footer__content">
             <div class="footer__col">
-              <img src={logo.src} width="30px" height="32px" alt="E-veselības logotips" itemprop="logo"/>
+              <img src={logo.src} width="29px" height="32px" alt="E-veselības logotips" itemprop="logo"/>
               <address>
                 Nacionālais veselības dienests<br>
                 Cēsu iela 31 k-3, 6. ieeja, Rīga, LV-1012
@@ -66,7 +66,12 @@ import iconPhone from '../assets/icon-phone.svg';
 
     &__link {
       margin-top: 40px;
+      color: var(--link-primary);
       display: inline-block;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 21px;
       text-decoration: underline;
     }
 
