--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,23 +9,16 @@ import notfound from '../assets/404.svg';
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Jaunā E‑veselības iedzīvotāju portāla prototips</title>
+    <title>404: Kļūdas lapa -Jaunā E‑veselības iedzīvotāju portāla prototips</title>
 
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
 		<link rel="manifest" href="favicon/site.webmanifest">
-
-		<!-- fb meta -->
-		<meta property="og:url"                content="https://teste.lv" />
-		<meta property="og:type"               content="website" />
-		<meta property="og:title"              content="Jaunā E‑veselības iedzīvotāju portāla prototips" />
-		<meta property="og:description"        content="Projekts paredz jaunās paaudzes iedzīvotāju E-veselības portāla prototipa izveidi. Prototips – portāla vīzijas modelis." />
-		<meta property="og:image"              content="fb-meta.png" />
   </head>
   <body>
-    <Header/>
+    <Header link="/#prototips"/>
     <div class="not-found">
         <div class="wrap">
             <div class="not-found__content">
