--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,19 +16,20 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<!-- <Welcome /> -->
-	<Header/>
-	<Hero/>
-	<News/>
-	<Steps/>
-	<Solutions/>
-	<Participants/>
-	<Description title="Kas ir prototips?" desc="<p>Prototips ir portāla vīzijas modelis - melnraksts. Tas parāda un ļauj notestēt portāla kopējo struktūru, funkcionalitāti un dizaina idejas vēl pirms tiek uzsākta pilnvērtīga izstrāde. Prototips nodrošina iespēju efektīvi plānot un uzlabot risinājumu, samazinot kļūdu un izmaiņu nepieciešamību turpmākajos posmos.</p>"/>
-	<Join/>
+	<Header link="#prototips"/>
+	<main>
+		<Hero/>
+		<News/>
+		<Steps/>
+		<Solutions/>
+		<Participants/>
+		<Description title="Kas ir prototips?" desc="<p>Prototips ir portāla vīzijas modelis - melnraksts. Tas parāda un ļauj notestēt portāla kopējo struktūru, funkcionalitāti un dizaina idejas vēl pirms tiek uzsākta pilnvērtīga izstrāde. Prototips nodrošina iespēju efektīvi plānot un uzlabot risinājumu, samazinot kļūdu un izmaiņu nepieciešamību turpmākajos posmos.</p>"/>
+		<Join/>
 
-	<Description title="Mediju pārstāvjiem" classList="description__last" desc=`
-		<p><a href="#" title="Iet uz kontaktu mediju saiti" target="_blank" rel="noopener noreferrer">Kontaktu medijiem <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 2V1h5v5h-1V2.707L9.707 7 9 6.293 13.293 2H10ZM2.293 13.707c.188.187.442.293.707.293h10a1.001 1.001 0 0 0 1-1V8h-1v5H3V3h5V2H3a1.001 1.001 0 0 0-1 1v10c0 .265.106.52.293.707Z" fill="#A224B2"/></svg></a></p>
-		<p><a href="#" title="Iet uz preses relīzēm" target="_blank" rel="noopener noreferrer">Preses relīzes <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 2V1h5v5h-1V2.707L9.707 7 9 6.293 13.293 2H10ZM2.293 13.707c.188.187.442.293.707.293h10a1.001 1.001 0 0 0 1-1V8h-1v5H3V3h5V2H3a1.001 1.001 0 0 0-1 1v10c0 .265.106.52.293.707Z" fill="#A224B2"/></svg></a></p>
-		<p><a href="#" title="Atvērt prototipu ekrānšāviņus" target="_blank" rel="noopener noreferrer">Prototipu ekrānšāviņi <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.295 6.295 13 7l-5 5-5-5 .705-.705 3.795 3.79V1h1v9.085l3.795-3.79ZM13 14v-2h1v2a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-2h1v2h10Z" fill="#A224B2"/></svg></a></p>`/>
+		<Description title="Mediju pārstāvjiem" classList="description__last" desc=`
+			<p><a href="https://www.vmnvd.gov.lv/lv/kontakti-medijiem" title="Iet uz kontaktu mediju saiti" target="_blank" rel="noopener noreferrer">Kontaktu medijiem <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 2V1h5v5h-1V2.707L9.707 7 9 6.293 13.293 2H10ZM2.293 13.707c.188.187.442.293.707.293h10a1.001 1.001 0 0 0 1-1V8h-1v5H3V3h5V2H3a1.001 1.001 0 0 0-1 1v10c0 .265.106.52.293.707Z" fill="#A224B2"/></svg></a></p>
+			<p><a href="https://www.vmnvd.gov.lv/lv/jaunumi?category%5B51%5D=51&created%5Bmin%5D=--.--.----&created%5Bmax%5D=--.--.----" title="Iet uz preses relīzēm" target="_blank" rel="noopener noreferrer">Preses relīzes <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 2V1h5v5h-1V2.707L9.707 7 9 6.293 13.293 2H10ZM2.293 13.707c.188.187.442.293.707.293h10a1.001 1.001 0 0 0 1-1V8h-1v5H3V3h5V2H3a1.001 1.001 0 0 0-1 1v10c0 .265.106.52.293.707Z" fill="#A224B2"/></svg></a></p>
+			<p><a href="#" title="Atvērt prototipu ekrānšāviņus" target="_blank" rel="noopener noreferrer">Prototipu ekrānšāviņi <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.295 6.295 13 7l-5 5-5-5 .705-.705 3.795 3.79V1h1v9.085l3.795-3.79ZM13 14v-2h1v2a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-2h1v2h10Z" fill="#A224B2"/></svg></a></p>`/>
+	</main>
 	<Footer/>
 </Layout>
