--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -57,6 +57,21 @@ const { title, classList, type, link, label } = Astro.props;
             &:hover {
                 background-color: var(--button-secondary-hover);
             }
+            &:focus-visible {
+                box-shadow: inset 0 0 0 2px var(--button-secondary-hover), inset 0 0 0 4px var(--layer-01-light);
+            }
+        }
+
+        &--dark {
+            background-color: var(--button-secondary);
+
+            
+            &:hover {
+                background-color: var(--button-secondary-hover);
+            }
+            &:focus-visible {
+                box-shadow: inset 0 0 0 2px var(--button-secondary-hover), inset 0 0 0 4px var(--layer-01-light);
+            }
         }
     }
 </style>
