--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -50,7 +50,7 @@ import Button from './Button.astro';
             line-height: normal;
 
             strong {
-                font-weight: 600;
+                font-weight: bold;
             }
         }
 
