--- a/src/components/Insight.astro
+++ b/src/components/Insight.astro
@@ -8,7 +8,7 @@ import Button from "./Button.astro"
             <div class="insight__desc text">
                 <p>Kad esi apskatījis prototipu, padalies, kas tev likās vērtīgs jaunajā E‑veselības portālā un kas, tavuprāt, būtu uzlabojams!</p>
             </div>
-            <Button title="Rakstīt komentāru" action={()=>console.log('test')}/>
+            <Button title="Rakstīt komentāru" link="" label=""/>
         </div>
     </div>
 </div>
