--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,9 @@
 		--layer-01-dark: #272525;
 		--text-secondary: #C6C6C6;
 
+		--link-primary: #C982D4;
 		--button-primary: #A224B2;
+		--button-secondary: #413143;
 		--button-secondary-hover: #6A2B72;
 	}
 
@@ -100,6 +102,9 @@
 		padding: 0;
 		list-style: none;
 	}
+	html {
+  		scroll-behavior: smooth;
+	}
 	html,
 	body {
 		padding: 0;
@@ -112,13 +117,24 @@
 		line-height: 24px; 
 	}
 
+	body {
+		display: flex;
+		flex-direction: column;
+		min-height: 100vh; /* Ensure full viewport height */
+	}
+
+	main {
+		flex: 1;
+	}
+
 	img {
 		display: inline-block;
 	}
 
 	.wrap {
 		margin: 0 auto;
-		max-width: 94%;
+		/* removing 24px from each side as design */
+		max-width: calc(100% - 48px);
 		
 		@media (min-width: 1024px) {
 			padding: 0 24px;
@@ -197,6 +213,35 @@
 				top: 4px;
 				margin-left: 2px;
 			}
+		}
+
+		h1 {
+			margin-bottom: 24px;
+			font-size: 40px;
+			font-style: normal;
+			font-weight: 300;
+			line-height: 48px;
+		}
+		h2 {
+			margin-bottom: 24px;
+			font-size: 24px;
+			font-style: normal;
+			font-weight: 700;
+			line-height: 32px;
+		}
+		h3 {
+			margin-bottom: 24px;
+			font-size: 18px;
+			font-style: normal;
+			font-weight: 700;
+			line-height: 24px;
+		}
+		h4 {
+			margin-bottom: 24px;
+			font-size: 16px;
+			font-style: normal;
+			font-weight: 700;
+			line-height: 24px;
 		}
 	}
 
