--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -90,7 +90,7 @@ import btnPlay from '../assets/button-playstore.svg';
             gap: 8px;
 
             img {
-                display: inline-block;
+                display: block;
                 width: 120px;
                 height: 40px;
             }
