--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -58,7 +58,7 @@ import iconPhone from '../assets/icon-phone.svg';
         color: var(--text-on-color);
         font-weight: bold;
 
-        &:hover, &:focus-visible {
+        &:hover {
           text-decoration: underline;
         }
       }
