--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -96,6 +96,10 @@
 	a {
 		text-decoration: none;
 		transition: all 0.1s ease-in;
+		outline: none;
+		&:focus-visible {
+			box-shadow: inset 0 0 0 2px var(--button-primary);
+		}
 	}
 	ul, li {
 		margin: 0;
